<resources>
    <string name="pref_key">notes</string>
    <string name="app_name">EZNotes</string>
    <string name="action_about">About</string>
    <string name="no_notes">No notes found.</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="note_name">Name of the new note:</string>
    <string name="note_name_hint">Enter name</string>
    <string name="new_note_view_title">New note properties</string>
    <string name="radio_text_note">Text note</string>
    <string name="radio_todo_list">To-do list</string>
    <string name="checkbox_notification">Reminder notification</string>
    <string name="checkbox_alarm">Reminder alarm</string>
    <string name="button_notification">Select notification date and time</string>
    <string name="button_alarm">Select alarm date and time</string>
    <string name="title_activity_edit_text_note">Edit Text Note : </string>
    <string name="hint_edit_text_note">Enter your note</string>
    <string name="title_activity_view_text_note">ViewTextNoteActivity</string>
    <string name="view_no_notification">No notification.</string>
    <string name="view_no_alarm">No alarm.</string>
    <string name="view_empty_note">Empty note.</string>
    <string name="name_already_in_use">An another note already exists with this name. Please use an another name.</string>
    <string name="created_successfully">  was created successfully.</string>
    <string name="no_name_entered">You must enter a name for your new note.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_view_todo_list">ViewTodoListActivity</string>
    <string name="add_todolist_item">Add new item</string>
</resources>
