<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewTextNoteActivity"
    tools:showIn="@layout/activity_view_text_note">

    <TextView
        android:id="@+id/text_note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_empty_note"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/notification_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_no_notification"
            android:textColor="@color/colorNotification"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm"
            android:layout_gravity="start"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/alarm_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_no_alarm"
            android:textColor="@color/colorAlarm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"/>
    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>